# ocwatch

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-deploy.sh  config.example.toml
.serena/: project.yml
docs/: oc-api-response-samples.json  validation-results.md
src/: agent_trait.rs  config.rs  ipc.rs  main.rs  types.rs
src/daemon/: bell.rs  core.rs  lifecycle.rs  mod.rs  recent_dirs.rs
src/discovery/: local.rs  mod.rs  remote.rs
src/opencode/: adapter.rs  client.rs  mod.rs
src/ssh/: manager.rs  mod.rs
src/tui/: app.rs  detail.rs  interaction.rs  mod.rs  session_list.rs  singleton.rs  status_bar.rs
